--- a/views/read/students.ejs
+++ b/views/read/students.ejs
@@ -1,7 +1,11 @@
 <% layout("layouts/boilerplate") -%>
 
 <div class="container my-3 p-2">
-  <h2 class="mb-4">Student Data</h2>
+  <div class="d-flex flex-column justify-content-center align-items-start mb-4">
+    <h2>Student Data</h2>
+    <a href="/new" class="btn btn-outline-dark btn-sm">Add Student</a>
+  </div>
+
   <div class="table-responsive">
     <table class="table table-striped table-bordered">
       <thead class="table-dark">
