--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,9 +16,9 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/utils.css" />
-    <link rel="stylesheet" href="css/includes.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/static/css/utils.css" />
+    <link rel="stylesheet" href="/static/css/includes.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
 
     <title>Idiot's School</title>
   </head>
@@ -32,6 +32,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="/js/bootstrap.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
   </body>
 </html>
